k8s/httpredirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: notes-maker
spec:
  redirectScheme:
    scheme: https
    permanent: true
