k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-frontend
  namespace: notes-maker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-frontend
  template:
    metadata:
      labels:
        app: notes-frontend
    spec:
      containers:
      - name: notes-frontend
        image: sauravkarki/notes-frontend:latest
        ports:
        - containerPort: 3000
